tests/ui/iterators/issue-106993.stderr
error[E0271]: expected `foo` to be a fn item that returns `i32`, but it returns `()`
  --> $DIR/issue-106993.rs:5:13
   |
LL | fn bar() -> impl Iterator<Item = i32> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `i32`
...
LL |     x.iter_mut().map(foo)
   |       ---------- -------- `Iterator::Item` changed to `()` here
   |       |
   |       `Iterator::Item` is `` here
   |
   = note: required for `Map<std::slice::IterMut<'_, Vec<u8>>, for<'a> fn(&'a mut Vec<u8>) {foo}>` to implement `Iterator`
   = note: the method call chain might not have had the expected associated types

error[E0271]: expected `foo` to be a fn item that returns `i32`, but it returns `()`
  --> $DIR/issue-106993.rs:11:14
   |
LL | fn bar2() -> impl Iterator<Item = i32> {
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `i32`
LL |
LL |     vec![vec![0, 2, 1], vec![5, 4, 3]].iter_mut().map(foo)
   |     ---------------------------------- ---------- -------- `Iterator::Item` changed to `()` here
   |     |                                  |
   |     |                                  `Iterator::Item` is `` here
   |     this expression has type ``
   |
   = note: required for `Map<std::slice::IterMut<'_, Vec<u8>>, for<'a> fn(&'a mut Vec<u8>) {foo}>` to implement `Iterator`
   = note: the method call chain might not have had the expected associated types

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
